2013-06-25  Leo Liu  <sdl.web@gmail.com>

	* ido.el (ido-read-internal): Allow forward slash on windows.

2013-06-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww): Start of strings is \\`, not ^.

2013-06-24  Ivan Kanis  <ivan@kanis.fr>

	* net/shr.el (shr-browse-url): Fix interactive spec.

	* net/eww.el (eww): Add a trailing slash to domain names.

2013-06-24  Juanma Barranquero  <lekktu@gmail.com>

	* faces.el (face-spec-recalc): Revert part of revno:113147 (bug#14705).

2013-06-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-browse-url): Use an external browser if given a
	prefix.

	* net/eww.el (eww-external-browser): Moved to shr.

2013-06-24  Ivan Kanis  <ivan@kanis.fr>

	* net/eww.el (eww): Work more correctly for file: URLs.
	(eww-detect-charset): Allow quoted charsets.
	(eww-yank-page-url): New command and keystroke.

2013-06-24  Daiki Ueno  <ueno@gnu.org>

	* epg.el (epg-make-context): Check if PROTOCOL is valid; embed the
	file name of gpg executable.
	(epg-context-program): New function.
	(epg-context-home-directory): New function.
	(epg-context-set-program): New function.
	(epg-context-set-home-directory): New function.
	(epg--start): Use `epg-context-program' instead of
	'epg-gpg-program'.
	(epg--list-keys-1): Likewise.

2013-06-24  Leo Liu  <sdl.web@gmail.com>

	* ido.el (ido-read-internal): Fix bug#14620.

2013-06-23  Juanma Barranquero  <lekktu@gmail.com>

	* faces.el (face-documentation): Simplify.
	(read-face-attribute, tty-find-type, x-resolve-font-name):
	Use `string-match-p'.
	(list-faces-display): Use `string-match-p'.  Simplify.
	(face-spec-recalc): Check face to avoid face alias loops.
	(read-color): Use `string-match-p' and non-capturing parenthesis.

2013-06-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-rescale-image): Use the new
	:max-width/:max-height functionality.

2013-06-23  Ivan Kanis  <ivan@kanis.fr>

	* net/eww.el (eww-search-prefix): New variable.
	(eww): Use it.