@@ -1,3 +1,8 @@
+2013-06-25  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>
+
+	* lisp/textmodes/bibtex.el (bibtex-mode, bibtex-set-dialect):
+	Update imenu-support when dialect changes.
+
 2013-06-25  Leo Liu  <sdl.web@gmail.com>
 
 	* ido.el (ido-read-internal): Allow forward slash on windows.
